; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test4.c_Sqlitetest4_Init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test4.c_Sqlitetest4_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i8*, i32* }

@Sqlitetest4_Init.aCmd = internal global [15 x %struct.anon] [%struct.anon { i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i32 0, i32 0), i32* inttoptr (i64 138 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i32 0, i32 0), i32* inttoptr (i64 128 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i32 0, i32 0), i32* inttoptr (i64 133 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i32 0, i32 0), i32* inttoptr (i64 142 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i32 0, i32 0), i32* inttoptr (i64 141 to i32*) }, %struct.anon { i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i32 0, i32 0), i32* inttoptr (i64 140 to i32*) }, %struct.anon { i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i32 0, i32 0), i32* inttoptr (i64 132 to i32*) }, %struct.anon { i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.7, i32 0, i32 0), i32* inttoptr (i64 135 to i32*) }, %struct.anon { i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i32 0, i32 0), i32* inttoptr (i64 139 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.9, i32 0, i32 0), i32* inttoptr (i64 131 to i32*) }, %struct.anon { i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.10, i32 0, i32 0), i32* inttoptr (i64 134 to i32*) }, %struct.anon { i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.11, i32 0, i32 0), i32* inttoptr (i64 129 to i32*) }, %struct.anon { i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.12, i32 0, i32 0), i32* inttoptr (i64 137 to i32*) }, %struct.anon { i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i32 0, i32 0), i32* inttoptr (i64 136 to i32*) }, %struct.anon { i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i32 0, i32 0), i32* inttoptr (i64 130 to i32*) }], align 16
@.str = private unnamed_addr constant [14 x i8] c"thread_create\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"thread_wait\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"thread_halt\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"thread_argc\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"thread_argv\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"thread_colname\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"thread_result\00", align 1
@.str.7 = private unnamed_addr constant [13 x i8] c"thread_error\00", align 1
@.str.8 = private unnamed_addr constant [15 x i8] c"thread_compile\00", align 1
@.str.9 = private unnamed_addr constant [12 x i8] c"thread_step\00", align 1
@.str.10 = private unnamed_addr constant [16 x i8] c"thread_finalize\00", align 1
@.str.11 = private unnamed_addr constant [12 x i8] c"thread_swap\00", align 1
@.str.12 = private unnamed_addr constant [14 x i8] c"thread_db_get\00", align 1
@.str.13 = private unnamed_addr constant [14 x i8] c"thread_db_put\00", align 1
@.str.14 = private unnamed_addr constant [16 x i8] c"thread_stmt_get\00", align 1
@TCL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Sqlitetest4_Init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %21, %1
  %5 = load i32, i32* %3, align 4
  %6 = sext i32 %5 to i64
  %7 = icmp ult i64 %6, 15
  br i1 %7, label %8, label %24

8:                                                ; preds = %4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [15 x %struct.anon], [15 x %struct.anon]* @Sqlitetest4_Init.aCmd, i64 0, i64 %11
  %13 = getelementptr inbounds %struct.anon, %struct.anon* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 16
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds [15 x %struct.anon], [15 x %struct.anon]* @Sqlitetest4_Init.aCmd, i64 0, i64 %16
  %18 = getelementptr inbounds %struct.anon, %struct.anon* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @Tcl_CreateCommand(i32* %9, i8* %14, i32* %19, i32 0, i32 0)
  br label %21

21:                                               ; preds = %8
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %4

24:                                               ; preds = %4
  %25 = load i32, i32* @TCL_OK, align 4
  ret i32 %25
}

declare dso_local i32 @Tcl_CreateCommand(i32*, i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
